--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "lucide-react": "^0.492.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
