--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "dompurify": "^3.2.5",
     "lucide-react": "^0.492.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
