--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "dompurify": "^3.2.5",
